@@ -9,8 +9,12 @@ use File::pushd qw( pushd );
 use Git::Sub;
 use Sub::Exporter -setup => {
     exports => [
-        'checkout_root', 'current_branch_name', 'https_remote_url',
-        'remote_url',    'travis_url',
+        'checkout_root',
+        'current_branch_name',
+        'https_remote_url',
+        'is_inside_work_tree',
+        'remote_url',
+        'travis_url',
     ]
 };
 use Try::Tiny qw( catch try );
@@ -66,6 +70,16 @@ sub https_remote_url {
     my $uri = URI->new( uf_uristr($remote_url) );
     $uri->scheme('https');
     return $uri;
+}
+
+sub is_inside_work_tree {
+    my $success;
+    capture_stderr {
+        try {
+            $success = git::rev_parse('--is-inside-work-tree');
+        };
+    };
+    return $success;
 }
 
 sub remote_url {
@@ -139,6 +153,15 @@ Defaults to using C<origin> as the remote if none is supplied.
 Defaults to master branch, but can also display current branch.
 
     my $current_branch_url = https_remote_url( 'origin', 1 );
+
+=head2 is_inside_work_tree
+
+Returns C<true> if C<git rev-parse --is-inside-git-dir> returns C<true>.
+Otherwise returns C<false>. This differs slightly from the behaviour of
+C<--is-inside-git-dir> in real life, since it returns C<fatal> rather than
+C<false> if run outside of a git repository.
+
+=cut
 
 =head2 remote_url( $remote_name )
 
