@@ -1,6 +1,7 @@
 Revision history for Git-Helpers
 
 {{$NEXT}}
+    - Add is_inside_work_tree() function.
 
 0.000015  2018-04-13 22:49:10Z
     - Use Term::Choose for a more intuitive UI
